@@ -5,7 +5,7 @@
   <target name="bootstrap">
     <mkdir dir="lib"/>
     <get dest="lib" usetimestamp="true"
-       src="https://boundless.artifactoryonline.com/boundless/main/com/oracle/appbundler/1.0ea/appbundler-1.0ea.jar"/>
+       src="https://repo.boundlessgeo.com/artifactory/boundless-main/com/oracle/appbundler/1.0ea/appbundler-1.0ea.jar"/>
      <get dest="lib" usetimestamp="true"
        src="http://central.maven.org/maven2/ant-contrib/ant-contrib/1.0b3/ant-contrib-1.0b3.jar"/>
   </target>
@@ -88,6 +88,10 @@
       <pathelement path="${gs.dir}/resources"/>
     </path>
 
+    <!-- extract relative jvm path, e.g. jdk1.8.0_73.jdk/Contents/Home -->
+    <propertyregex property="java.local" input="${env.JAVA_HOME}"
+      regexp=".*/([^/]*/[^/]*/[^/]*)" select="\1"/>
+
     <bundleapp 
         classpathref="gs.app.classpath"
         outputdirectory="${app.dir}"
@@ -109,6 +113,14 @@
       <option value="-Xms128m"/>
       <option value="-Xmx512m"/>
       <option value="-Dapple.laf.useScreenMenuBar=true"/>
+
+      <!-- Work around conflict with local JAI extensions installed in ~/Library/Java/Extensions -->
+      <!-- (system extension  MRJToolkit used by launcher to open the default browser) -->
+      <option value="-Djava.ext.dirs=$APP_ROOT/Contents/PlugIns/${java.local}/jre/lib/ext:/System/Library/Java/Extensions"/>
+      
+      <!-- enable marlin renderer -->
+      <option value="-Xbootclasspath/a:$APP_ROOT/Contents/Java/webapps/geoserver/WEB-INF/lib/${marlin_jar}"/>
+      <option value="-Dsun.java2d.renderer=org.marlin.pisces.MarlinRenderingEngine"/>
 
       <!-- Workaround since the icon parameter for bundleapp doesn't work -->
       <option value="-Xdock:icon=Contents/Resources/GeoServer.icns"/>
